--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,9 @@
     <meta charset="utf-8" />
     <title>messenger</title>
   </head>
-  <body></body>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
+  </body>
 </html>
