--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>messenger</title>
   </head>
   <body>
+    <span id="status-ball" style="color: red; position: fixed">⬤</span>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="index.tsx"></script>
